correctly selecting the right identity if found in the original message. fixes #31

--- a/manifest.json
+++ b/manifest.json
@@ -28,6 +28,7 @@
         "messagesModify",
         "tabs",
         "activeTab",
+        "accountsRead",
         "<all_urls>"
     ],
     "background": {
