--- a/manifest.json
+++ b/manifest.json
@@ -4,6 +4,7 @@
     "description": "__MSG_extensionDescription__",
     "version": "1.0.4",
     "author": "Mic (m@micz.it)",
+    "homepage_url": "https://micz.it/thunderdbird-addon-thunderai/",
     "browser_specific_settings": {
         "gecko": {
             "id": "thunderai@micz.it",
