added downloads permission to export the addons file. see #65

--- a/manifest.json
+++ b/manifest.json
@@ -30,6 +30,7 @@
         "tabs",
         "activeTab",
         "accountsRead",
+        "downloads",
         "<all_urls>"
     ],
     "background": {
