--- a/manifest.json
+++ b/manifest.json
@@ -31,6 +31,7 @@
         "activeTab",
         "accountsRead",
         "downloads",
+        "notifications",
         "<all_urls>"
     ],
     "background": {
