Implemented a workaround for Intl.Segmenter. Porter from version 2.1.5. See #139

--- a/manifest.json
+++ b/manifest.json
@@ -49,5 +49,13 @@
         "_thunderai__do_action": {
         "description": "Opens the ThunderAI prompts menu"
         }
-    }
+    },
+    "content_scripts": [
+        {
+            "matches": ["https://*.chatgpt.com/*"],
+            "js": ["js/tb115_segmenter/tb115_loader.js"],
+            "all_frames": true,
+            "run_at": "document_start"
+        }
+    ]
 }
