action icon in the compose window moved in the format toolbar. fixes #173

--- a/manifest.json
+++ b/manifest.json
@@ -17,6 +17,7 @@
         "default_popup": "popup/mzta-popup.html"
     },
     "compose_action": {
+        "default_area": "formattoolbar",
         "default_title": "__MSG_menu_title__",
         "default_icon": "images/icon-32px.png",
         "default_popup": "popup/mzta-popup.html"
