--- a/manifest.json
+++ b/manifest.json
@@ -32,6 +32,7 @@
         "accountsRead",
         "downloads",
         "messagesTagsList",
+        "messagesTags",
         "https://*.chatgpt.com/*"
     ],
     "background": {
