messagesUpdate permission added. see #183

--- a/manifest.json
+++ b/manifest.json
@@ -33,6 +33,7 @@
         "downloads",
         "messagesTagsList",
         "messagesTags",
+        "messagesUpdate",
         "https://*.chatgpt.com/*"
     ],
     "background": {
