messagesMove is now an optional permission. see #231

--- a/manifest.json
+++ b/manifest.json
@@ -36,6 +36,9 @@
         "messagesUpdate",
         "https://*.chatgpt.com/*"
     ],
+    "optional_permissions": [
+        "messagesMove"
+    ],
     "background": {
         "page": "mzta-background.html"
     },
