Add <all_urls> to optional permissions in manifest.json. see #331

--- a/manifest.json
+++ b/manifest.json
@@ -37,7 +37,8 @@
     "optional_permissions": [
         "messagesTags",
         "messagesUpdate",
-        "messagesMove"
+        "messagesMove",
+        "<all_urls>"
     ],
     "background": {
         "page": "mzta-background.html"
