Add ChatGPT web permission handling as optional in onboarding and popup. See #293

--- a/manifest.json
+++ b/manifest.json
@@ -31,13 +31,13 @@
         "activeTab",
         "accountsRead",
         "downloads",
-        "messagesTagsList",
-        "https://*.chatgpt.com/*"
+        "messagesTagsList"
     ],
     "optional_permissions": [
         "messagesTags",
         "messagesUpdate",
         "messagesMove",
+        "https://*.chatgpt.com/*",
         "<all_urls>"
     ],
     "background": {
