Add Google Gemini API and Anthropic API options to bug report template

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -54,6 +54,8 @@ body:
       options:
         - ChatGPT Web Interface
         - OpenAI ChatGPT API
+        - Google Gemini API
+        - Anthropic API
         - Ollama API
         - OpenAI Compatible API
   - type: markdown
