Anthropic API renamed to Cloude API. see #510

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -56,7 +56,7 @@ body:
         - ChatGPT Web Interface
         - OpenAI ChatGPT API
         - Google Gemini API
-        - Anthropic API
+        - Claude API
         - Ollama API
         - OpenAI Compatible API
   - type: markdown
