readded <all_urls> permission. see https://github.com/micz/ThunderAI/issues/524#issuecomment-3837352541

--- a/manifest.json
+++ b/manifest.json
@@ -41,7 +41,8 @@
         "https://*.openai.com/*",
         "https://*.anthropic.com/*",
         "https://*/*",
-        "http://*/*"
+        "http://*/*",
+        "<all_urls>"
     ],
     "background": {
         "page": "mzta-background.html"
