adding a calendar event from clipboard. see #362

--- a/manifest.json
+++ b/manifest.json
@@ -34,6 +34,7 @@
         "messagesTagsList"
     ],
     "optional_permissions": [
+        "clipboardRead",
         "messagesTags",
         "messagesUpdate",
         "messagesMove",
