Enhance issue body with CDN links for Tom Select
Updated the issue body to include CDN links for the latest Tom Select version.

--- a/.github/workflows/tom-select-release-check.yml
+++ b/.github/workflows/tom-select-release-check.yml
@@ -48,7 +48,11 @@ jobs:
                 owner,
                 repo,
                 title: issueTitle,
-                body: `Update Tom Select to version  **${latestTag}**. https://github.com/orchidjs/tom-select/releases`
+                body: `Update Tom Select to version  **${latestTag}**.
+
+                https://cdn.jsdelivr.net/npm/tom-select@${latestTag}/dist/js/tom-select.base.js
+                
+                https://cdn.jsdelivr.net/npm/tom-select@${latestTag}/dist/css/tom-select.default.min.css`
               });
               core.info(`New issue created for version ${latestTag}.`);
             }
